--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Shakespeare's Revenge: The Bard's Insult Generator</title>
-    <link rel="stylesheet" type="text/css" href="#">
+    <link rel="stylesheet" type="text/css" href="shakestyle.css">
   </head>
   <body>
     <h1>This is a test, test only. Nothing special</h1>
