--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/css" href="shakestyle.css">
   </head>
   <body>
-    <h1>This is a test, test only. Nothing special</h1>
+    <!-- navigation bar section -->
+    <nav class="bar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="abt-ss.html">Shakespearian Insults</a></li>
+        <li><a href="generator.html>Insult Generator</a></li>
+      </ul>
+    </nav>
+    
   </body>
 </html>
