--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Yahoo Doctor: The Internet's Most Accurate Medical Diagnostics</title>
     <link rel="stylesheet" type="text/css" href="shakestyle.css">
+		<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   </head>
   <body>
 	  
@@ -18,15 +19,20 @@
     </nav>
     
 	  <!-- mainpage heading -->
-	  <header class="main">
+		<img class="background" id="mainback" src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2020/04/doctors-office-safe.jpg">
+	  <header class="main" id="mainhead">
 	    <h1>Yahoo! Doctor</h1>
-		  <p>Simple Diagnoses, Simple Solutions</p>
+		  <p id="subtitle">Simple Diagnoses, Simple Solutions</p>
 	  </header>
 	
 	  <!-- home page body -->
 	  <div class="welcome">
-		  <h3>Sick? In pain? Need a quick diagnosis? You've come to the right place!</h3>
-		  <p>With a team of medical professionals and expert programmers behind it, Yahoo Doctor is the first web-based search engine for health! Yahoo Doctor lets you access the world's largest database of possible diseases and afflictions, find your symptoms, and connect them with the help of our auto-diagnoser. The Yahoo Doctor auto-diagnoser is programmed with a wide variety of possbile connections between symptoms, exposures, and genetic factors, and has a 95% rate of success! Learn more about it <a href="abt-yd.html">here</a>.</p>
+			<h3>Sick? In pain? Need a quick diagnosis? You've come to the right place!</h3>
+		  <p class="textual">With a team of medical professionals and expert programmers behind it, Yahoo Doctor is the first web-based search engine for health! Yahoo Doctor lets you access the world's largest database of possible diseases and afflictions, find your symptoms, and connect them with the help of our auto-diagnoser. The Yahoo Doctor auto-diagnoser is programmed with a wide variety of possbile connections between symptoms, exposures, and genetic factors, and has a 95% rate of success! Learn more about it <a href="abt-yd.html">here</a>.</p>
 	  </div>
+		<div class="quote">
+			<h3>"Yahoo Doctor correctly diagnosed a major stroke I had that was leaving physicians puzzled. I'm speechless!"</h3>
+			<p>- Barbara, 65, Maryland</p>
+		</div>
   </body>
 </html>
