--- a/abt-yd.html
+++ b/abt-yd.html
@@ -13,13 +13,30 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="abt-yd.html">Medical Methods</a></li>
         <li><a href="generator.html">Auto-Diagnoser</a></li>
-		    <li><a href="more-info.html">External Sources</a></li>
+		    <li><a href="more-info.html">Disclaimer</a></li>
       </ul>
     </nav>
 		
-		<header>
+		<!-- page header -->
+		<img class="background" id="abtback" src="https://global.unitednations.entermediadb.net/assets/mediadb/services/module/asset/downloads/preset/Libraries/Production+Library/24-03-20-Zhang-Yuanli-Starting-DPMAS-Treatment.jpg/image1170x530cropped.jpg">
+		<header class="main" id="abthead">
 			<h2>Our Medical Methods</h2>
 		</header>
 		
+		<!-- descriptive section for how the auto-diagnoser works -->
+		<div class="firststuff">
+		  <p>Yahoo Doctor employs a variety of complex programs and methods to diagnose all types of ailments based on the most basic symptoms. Read about the major aspects below.</p>
+		</div>
+		<div class="textual" id="methods">	
+			<h3>Auto-Diagnostic Database</h3>
+			<p>The YD auto-diagnoser uses a database of afflictions and corresponding symptoms comprised of data from over 15 medical institutions. As data is collected on a quarterly basis, our database is updated regularly to provide correct and up-to-date medical solutions to your afflictions. When you submit your symptoms from the long list of choices you have on our <a href="generator.html">Auto-Diagnoser Page</a>, each of them, along with their severity, will be parsed through the database and cross-referenced with the rest of your response to provide the most likely results for what you put in. The more you give us, the more we can give you!</p>
+			<h3>Live Doctor Observance</h3>
+			<p>The last major aspect of our auto-diagnoser is the referral to real-life doctors that we have working at the Yahoo Doctor clinic around the clock. When you type in unlisted symptoms that the auto-diagnostic program does not recognize, our doctors will be on the job to provide their own professional knowledge for your diagnosis. Even if you don't put in any extra symptoms, the live doctors will be the last stop to ensure that even if something goes wrong, you will not be given an incorrect or overblown diagnosis.</p>
+		</div>
+		
+		<!-- lists the (fictional) doctors employed at YD -->
+		<div id="doctors">
+			
+		</div>
 	</body>
 </html>
