--- a/generator.html
+++ b/generator.html
@@ -18,6 +18,13 @@
     </nav>
 	  
 		<!-- This is where the form for filling out symptoms and connection to a JS program will go. This will be one of the last things I start working on -->
+		<header>
+			<h2>Auto-Diagnostic Form</h2>
+		</header>
+		
+		<form>
+			
+		</form>
 		
   </body>
 </html>
