Added Random Numbers Link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="abt-yd.html">Medical Methods</a></li>
         <li><a href="generator.html">Auto-Diagnoser</a></li>
-		    <li><a href="more-info.html">Disclaimer</a></li>
+	<li><a href="more-info.html">Disclaimer</a></li>
+	      <li><a href="stats-numbers.html">Random Numbers</li>   
       </ul>
     </nav>
     
