--- a/more-info.html
+++ b/more-info.html
@@ -14,6 +14,7 @@
         <li><a href="abt-yd.html">Medical Methods</a></li>
         <li><a href="generator.html">Auto-Diagnoser</a></li>
 	      <li><a href="more-info.html">Disclaimer</a></li>
+	      <li><a href="stats-numbers.html">Random Numbers</a></li>
       </ul>
     </nav>
 	
