--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
 	  
+    <!-- Two roads diverge in a yellow wood
+	 But screw Robert Frost - you must take both!
+	 Don't Panic! The first real clue lies in wait
+	 In the proprietor's inbox, by troth -->
+	  
     <!-- navigation bar section -->
     <nav class="bar">
       <ul>
